--- a/setup/templates/apt.sources/debian.template
+++ b/setup/templates/apt.sources/debian.template
@@ -3,14 +3,14 @@
 #------------------------------------------------------------------------------#
 
 ###### Debian Update Repos
-deb http://ftp.de.debian.org/debian/ RELEASE main contrib non-free
-deb-src http://ftp.de.debian.org/debian/ RELEASE main contrib non-free
+deb http://deb.debian.orgdebian/ RELEASE main contrib non-free
+deb-src http://deb.debian.org/debian/ RELEASE main contrib non-free
 deb http://security.debian.org/ RELEASE/updates main contrib non-free
 deb-src http://security.debian.org/ RELEASE/updates main contrib non-free
-deb http://ftp.de.debian.org/debian/ RELEASE-updates main contrib non-free
-deb-src http://ftp.de.debian.org/debian/ RELEASE-updates main contrib non-free
-deb http://ftp.de.debian.org/debian RELEASE-backports main contrib non-free
-deb-src http://ftp.de.debian.org/debian RELEASE-backports main contrib non-free
+deb http://deb.debian.org/debian/ RELEASE-updates main contrib non-free
+deb-src http://deb.debian.org/debian/ RELEASE-updates main contrib non-free
+deb http://deb.debian.org/debian RELEASE-backports main contrib non-free
+deb-src http://deb.debian.org/debian RELEASE-backports main contrib non-free
 
 deb http://ftp.debian.org/debian/ RELEASE-updates main contrib non-free
 deb-src http://ftp.debian.org/debian/ RELEASE-updates main contrib non-free
